Fix text alignment

--- a/src/features/click-to-load/assets/ctl-placeholder-block.css
+++ b/src/features/click-to-load/assets/ctl-placeholder-block.css
@@ -255,6 +255,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
+    text-align: left;
 }
 @media (min-width: 480px) {
     .ddg-ctl-placeholder-card-title,
